# kubesecrets

./: .gitignore  Cargo.toml  Makefile  README.md  release.sh
src/: application_error.rs  b64.rs  commands.rs  difference.rs  duplicates.rs  errors.rs  fs.rs  kubectl.rs  main.rs  secrets.rs
src/kubectl/: errors.rs  mod.rs
