[package]
name = "kubesecrets"
description = "Tool to manage secrets in Kubernetes with kubectl"
version = "0.4.4"
authors = ["Chris Atkin <atkinchris@gmail.com>"]

[dependencies]
ansi_term = "0.11.0"
base64 = "0.9.3"
clap = "2.32.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
text_io = "0.1.7"
